# ome-files-cpp

./: CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: BioFormatsCommon.cmake  BoostChecks.cmake  CompilerChecks.cmake  Doxygen.cmake  DoxygenCheck.cmake  GTest.cmake  HeaderTest.cmake  ImageLibraries.cmake  Options.cmake  PlatformChecks.cmake  QtGLChecks.cmake  RegexChecks.cmake  SourceArchive.cmake  Sphinx.cmake  SphinxCheckInternalLinks.cmake  TemplateCmdConfig.cmake.in  TemplateCmdWrapper.cmake.in  TemplateInternalCmdWrapper.cmake.in  TemplateInternalShellWrapper.cmake.in  TemplateShellConfig.cmake.in  TemplateShellWrapper.cmake.in  ThreadChecks.cmake  Version.cmake  XalanChecks.cmake  XercesChecks.cmake  list-manpage-dependencies.py  list-manpages.py
docs/doxygen/: CMakeLists.txt  bioformats.dox.cmake  ome-files.dox.cmake
docs/sphinx/: CMakeLists.txt  Makefile  building.rst  conf.py.in  conversion.rst  conversion.txt  index.rst  index.txt  maintenance.txt  ome-files-env.rst  ome-files-env.txt  overview.rst  overview.txt  preamble.tex  schema.rst  schema.txt  tiling.rst  tutorial.rst  tutorial.txt
docs/sphinx/_templates/: globalbftoc.html
docs/sphinx/commands/: ome-files-info.rst  ome-files-info.txt  ome-files-view.rst  ome-files-view.txt  ome-files.rst
docs/sphinx/examples/: fractal.cpp  fractal.h  metadata-formatreader.cpp  metadata-formatwriter.cpp  metadata-formatwriter2.cpp  metadata-io.cpp  model-io.cpp  pixeldata.cpp  subresolution.cpp  units.cpp
docs/sphinx/plots/: tiling.R
docs/sphinx/themes/: globalbftoc.html
examples/: CMakeLists.txt
lib/: CMakeLists.txt
lib/ome/bioformats/: CMakeLists.txt  MetadataTools.cpp  OMEBioFormatsConfig.cmake  Version.cpp  Version.h.in  config-internal.h.in  module.cpp  module.h
lib/ome/bioformats/tiff/: Field.cpp  IFD.cpp  Sentry.cpp  TIFF.cpp  TileInfo.cpp  Util.cpp  config.h.in
lib/ome/files/: CMakeLists.txt  CoreMetadata.cpp  CoreMetadata.h  CoreMetadataList.h  FileInfo.h  FormatException.cpp  FormatException.h  FormatHandler.h  FormatReader.h  FormatTools.cpp  FormatTools.h  FormatWriter.h  MetadataConfigurable.cpp  MetadataConfigurable.h  MetadataList.h  MetadataMap.h  MetadataOptions.cpp  MetadataOptions.h  MetadataTools.cpp  MetadataTools.h  Modulo.cpp  Modulo.h  OMEFilesConfig.cmake  OMEFilesConfig.cmake.in  PixelBuffer.cpp  PixelBuffer.h  PixelProperties.cpp  PixelProperties.h  PlaneRegion.h  TileBuffer.cpp  TileBuffer.h  TileCache.cpp  TileCache.h  TileCoverage.cpp  TileCoverage.h  Types.h  UnknownFormatException.cpp  UnknownFormatException.h  UnsupportedCompressionException.cpp  UnsupportedCompressionException.h  (+9 more)
lib/ome/files/detail/: FormatReader.cpp  FormatReader.h  FormatWriter.cpp  FormatWriter.h  OMETIFF.h
lib/ome/files/detail/tiff/: Tags.h
lib/ome/files/in/: MinimalTIFFReader.cpp  MinimalTIFFReader.h  OMETIFFReader.cpp  OMETIFFReader.h  TIFFReader.cpp  TIFFReader.h
lib/ome/files/tiff/: Codec.cpp  Codec.h  Exception.cpp  Exception.h  Field.cpp  Field.h  IFD.cpp  IFD.h  ImageJMetadata.cpp  ImageJMetadata.h  Sentry.cpp  Sentry.h  TIFF.cpp  TIFF.h  Tags.cpp  Tags.h  TileInfo.cpp  TileInfo.h  Types.h  Util.cpp  Util.h  config.h  config.h.in
lib/ome/internal/: CMakeLists.txt  url.h
lib/ome/qtwidgets/: CMakeLists.txt  GLContainer.cpp  GLContainer.h  GLView2D.cpp  GLView2D.h  GLWindow.cpp  GLWindow.h  NavigationDock2D.cpp  NavigationDock2D.h  OMEQtWidgetsConfig.cmake  TexelProperties.cpp  TexelProperties.h  glm.h
lib/ome/qtwidgets/gl/: Axis2D.cpp  Axis2D.h  Grid2D.cpp  Grid2D.h  Image2D.cpp  Image2D.h  Util.cpp  Util.h
lib/ome/qtwidgets/gl/v20/: V20Axis2D.cpp  V20Axis2D.h  V20Grid2D.cpp  V20Grid2D.h  V20Image2D.cpp  V20Image2D.h
lib/ome/qtwidgets/glsl/v110/: GLFlatShader2D.cpp  GLFlatShader2D.h  GLImageShader2D.cpp  GLImageShader2D.h  GLLineShader2D.cpp  GLLineShader2D.h
lib/ome/test/: CMakeLists.txt  io.cpp  io.h  main.cpp
libexec/: CMakeLists.txt
libexec/info/: CMakeLists.txt  ImageInfo.cpp  ImageInfo.h  info.cpp  options.cpp  options.h
libexec/view/: CMakeLists.txt  Window.cpp  Window.h  view.cpp
python/: setup.py
python/src/: ome_files.cpp
scripts/: source-archive
share/icons/: CMakeLists.txt
test/: CMakeLists.txt
test/ome-bioformats/: formatreader.cpp  metadatatools.cpp  minimaltiffreader.cpp  minimaltiffwriter.cpp  ometiffwriter.cpp  tiff.cpp  tiffreader.cpp  tiffsamples.cpp  tiffsamples.h  version.cpp  xmltools.cpp
test/ome-files/: CMakeLists.txt  coremetadatalist.cpp  fileinfo.cpp  formatreader.cpp  formattools.cpp  formatwriter.cpp  metadatalist.cpp  metadatamap.cpp  metadatatools.cpp  minimaltiffreader.cpp  minimaltiffwriter.cpp  ometiffwriter-subresolutions.cpp  ometiffwriter.cpp  pixel.h  pixelbuffer-bit.cpp  pixelbuffer-complex.cpp  pixelbuffer-double.cpp  pixelbuffer-doublecomplex.cpp  pixelbuffer-float.cpp  pixelbuffer-int16.cpp  pixelbuffer-int32.cpp  pixelbuffer-int8.cpp  pixelbuffer-order.cpp  pixelbuffer-uint16.cpp  pixelbuffer-uint32.cpp  pixelbuffer-uint8.cpp  pixelbuffer.h  pixelproperties.cpp  planeregion.cpp  tiff.cpp  tiffreader.cpp  tiffsamples.cpp  tiffsamples.h  tilebuffer.cpp  tilecache.cpp  tilecoverage.cpp  variantpixelbuffer.cpp  version.cpp  xmltools.cpp
test/ome-files/data/: CMakeLists.txt  brokenchannels-uncorrectable.ome  invalid.file  valid.test
test/ome-qtwidgets/: CMakeLists.txt
